# apollo

./: .editorconfig  .gitignore  AGENTS.md  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  rustfmt.toml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial_schema.sql  0002_language_settings.sql  0003_default_ocr_language_eng.sql  0004_reasoning_effort_settings.sql
src-tauri/resources/: provider-models.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: bootstrap_snapshot.rs  errors.rs  mod.rs  state.rs
src-tauri/src/application/dto/: analysis.rs  mod.rs  ocr.rs
src-tauri/src/application/ports/: capture.rs  mod.rs  provider.rs  repositories.rs  telemetry.rs
src-tauri/src/application/services/: prompt_builder.rs
src-tauri/src/application/use_cases/: analyze_capture.rs  analyze_capture_service.rs  continue_conversation.rs  continue_conversation_service.rs  list_provider_models.rs  list_provider_models_service.rs  mod.rs
src-tauri/src/commands/: analysis.rs  capture.rs  history.rs  mod.rs  providers.rs  settings.rs  system.rs
src-tauri/src/domain/: app_metadata.rs  errors.rs  mod.rs
src-tauri/src/domain/entities/: capture_record.rs  configured_provider.rs  mod.rs  (+5 more)
src-tauri/src/infrastructure/: capture.rs  database.rs  logging.rs  migrations.rs  mod.rs  ocr.rs  paths.rs  persistence.rs  provider_catalog.rs  provider_registry.rs
src-tauri/tests/: analysis_workflows.rs  cli_provider_execution.rs  cli_providers_contract.rs  conversation_contract.rs  history_contract.rs  http_provider_adapters.rs  model_selection_contract.rs  ocr_contract.rs  persistence_repository.rs  provider_registry_resolution.rs  providers_contract.rs  settings_contract.rs
src-tauri/tests/support/: mod.rs
(+67 files in other folders)
