[package]
name = "apollo"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Apollo Maintainers"]
default-run = "apollo"

[lib]
name = "apollo"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
async-trait = "0.1.89"
base64 = "0.22"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
xcap = "0.9.4"

[dev-dependencies]
tempfile = "3.23.0"
